--- a/Relatorio_Connect4.ipynb
+++ b/Relatorio_Connect4.ipynb
@@ -24,8 +24,8 @@
     "### _Integrantes:_\n",
     "   \n",
     "_Robert Gleison dos Reis Pereira (up202200496)_  \n",
-    "_Sophia Cheto de Queiroz Fonseca (up202200496)_    \n",
-    "_Guilherme .. (up202200496)_  "
+    "_Sophia Cheto de Queiroz Fonseca (up202200336)_    \n",
+    "_Guilherme Magalhães (up202205505)_  "
    ]
   },
   {
