added mcts time analysis

--- a/Analise_Connect4.ipynb
+++ b/Analise_Connect4.ipynb
@@ -2109,41 +2109,56 @@
    "metadata": {},
    "source": [
     "3 SEGUNDOS\n",
-    "Vitórias: 2\n",
-    "Derrotas: 10\n",
+    "Vitórias: 8\n",
+    "Derrotas: 2\n",
     "Empates: 0\n",
     "\n",
     "4 SEGUNDOS\n",
-    "Vitórias: \n",
-    "Derrotas: \n",
-    "Empates: \n"
+    "Vitórias: 7 \n",
+    "Derrotas: 3\n",
+    "Empates: 0\n",
+    "\n",
+    "5 SEGUNDOS\n",
+    "Vitórias: 7 \n",
+    "Derrotas: 3\n",
+    "Empates: 0\n",
+    "\n",
+    "6 SEGUNDOS\n",
+    "Vitórias: 7 \n",
+    "Derrotas: 3\n",
+    "Empates: 0\n",
+    "\n",
+    "7 SEGUNDOS\n",
+    "Vitórias: 9\n",
+    "Derrotas: 1\n",
+    "Empates: 0\n",
+    "\n",
+    "8 SEGUNDOS\n",
+    "Vitórias: 9\n",
+    "Derrotas: 1\n",
+    "Empates: 0\n",
+    "\n",
+    "9 SEGUNDOS\n",
+    "Vitórias: 9\n",
+    "Derrotas: 1\n",
+    "Empates: 0\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699f5e33-2be9-432e-86ae-223146a21dd1",
+   "metadata": {},
+   "source": [
+    "De acordo com os dados obtidos nas simulações, o MCTS tem a sua melhor performance a partir dos 7 segundos. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a34fb82-a8e8-4be6-abea-b537a62a987a",
+   "id": "26872975-d1c4-4546-9e6d-ea38f65b21a9",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2e13adb-8016-40ec-8d51-e1f4a1986bb1",
-   "metadata": {},
-   "source": [
-    "2. MCTS vs adversarial (estudar o quanto a porcentagem sobe de acordo com o tempo do MCTS)\n",
-    "3. Alpha Beta vs adversarial (estudar o quanto a porcentagem sobe de acordo com a profundidade do AB)\n",
-    "4. MCTS vs alpha beta (cada um com seu melhor empenho, comparar pra ver quem é melhor)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "966f695e-0aa5-4e57-b338-f1adc17bb531",
-   "metadata": {},
-   "source": [
-    "Num geral, o MCTS com 3 segundos como limite já o é o suficiente para ganhar de humanos comuns, mas sofre um pouco com outros algorítmos adversáriais, como o AlphaBeta e o A* Adversarial. Para efeitos de teste, colocamos o MCTS com 3 segundos de limite para jogar contra o A* Adversarial, que é o algoritmo que mais se aproxima do modo de jogo humano (raciocina 2 jogadas à frente), e o resultado foi que, de 20 jogos, o MCTS ganhou 10 jogos e empatou 3. Mas ao subir o tempo de 3 segundos para 7, ele conseguiu vencer 15 jogos e empatou 1.\n"
-   ]
   }
  ],
  "metadata": {
