--- a/Analise_Connect4.ipynb
+++ b/Analise_Connect4.ipynb
@@ -65,7 +65,7 @@
    "id": "15e4971e-a89b-4b2a-9949-b2ebab3a83ae",
    "metadata": {},
    "source": [
-    "Após o algoritmo de heurística ser criado. Estipulamos um valor padrão:\n",
+    "Inicialmente, estipulamos um valor padrão para a heurística:\n",
     "```\n",
     "- Pontuação para 1 peça aliada: 1\n",
     "- Pontuação para 2 peças aliadas: 10\n",
@@ -457,8 +457,8 @@
    "id": "de5c81f8-1423-49bf-865f-99d782899a32",
    "metadata": {},
    "source": [
-    "Aqui começamos a ver a deficiência do A*. Como ele não calcula a jogada do Player 1 seguinte à jogada que a IA fará, ele não consegue prever nem tentar atrapalhar o nosso jogo, a não ser que isso o beneficie em forma de heurística.  \n",
-    "Nesse caso, completar uma sequência própria de 3 peças dá mais pontos à heurística (final = 8) do que atrapalhar a sequência de peças em formação do Player 2 (final = -5). Logo, a primeira opção é a escolhida."
+    "Aqui começamos a ver a deficiência do A*. Como ele não calcula a jogada do Player 1 seguinte à jogada que a IA fará, ele não consegue prever, nem tentar atrapalhar o jogo do oponente, a não ser que isso o beneficie em forma de heurística.  \n",
+    "Nesse caso, completar uma sequência própria de 3 peças dá mais pontos à heurística (final = 8) do que atrapalhar a sequência de peças em formação do Player 1 (final = -5). Logo, a primeira opção é a escolhida."
    ]
   },
   {
@@ -1110,7 +1110,7 @@
    "id": "bb06bd13-0d81-48b2-9d75-a5b71cf48efe",
    "metadata": {},
    "source": [
-    "Resultado esperado: No estado_inicial, nós do grupo, podemos ganhar o jogo caso joguemos na coluna 2 na próxima rodada. Queremos que ele nos impeça de ganhar na coluna 2.\n",
+    "Resultado esperado: No estado_inicial, podemos ganhar o jogo caso joguemos na coluna 2 na próxima rodada. Queremos que ele nos impeça de ganhar na coluna 2.\n",
     "\n",
     "Resultado obtido:"
    ]
@@ -1278,7 +1278,7 @@
    "source": [
     "## Análise do MCTS:\n",
     "\n",
-    "Num geral, o MCTS com 3 segundos como limite já o é o suficiente para ganhar de humanos comuns, mas sofre um pouco com outros algorítmos adversáriais, como o AlphaBeta e o A* Adversarial. Para esse de teste, estamos jogando contra o MCTS com 3 e 6 segundos de limite e utilizando a constante = raiz de 2, para balanceamento entre Exploitation and Exploration.\n",
+    "Num geral, o MCTS com 3 segundos como limite já o é o suficiente para ganhar de humanos comuns, mas sofre um pouco com outros algorítmos adversáriais, como o AlphaBeta e o A* Adversarial. Para esse teste, estamos jogando contra o MCTS com 3 e 6 segundos de limite e utilizando a constante = raiz de 2, para balanceamento entre Exploitation and Exploration.\n",
     "\n",
     "\n",
     "**Vitórias:** Número de vitórias da IA que partiam desse nó  \n",
@@ -1539,7 +1539,7 @@
    "id": "fe8ea69a-3c89-4ede-992f-b6c50258c2ce",
    "metadata": {},
    "source": [
-    "Resultado esperado: No estado_inicia, nosso grupo tem a possibilidade de vencer o jogo na próxima rodada com uma diagonal, jogando na coluna 5. Queremos que o MCTS não permita isso e jogue na coluna 5.\n",
+    "Resultado esperado: No estado_inicial, nosso grupo tem a possibilidade de vencer o jogo na próxima rodada com uma diagonal, jogando na coluna 5. Queremos que o MCTS não permita isso e jogue na coluna 5.\n",
     "\n",
     "Resultado obtido:"
    ]
@@ -1738,7 +1738,7 @@
    "id": "3113151b-9d45-49d3-8cd2-a990a1a08d6b",
    "metadata": {},
    "source": [
-    "Resultado esperado: No estado_inicial apresentado, é suposto que o MCTS tenda a jogar nas posições do meio devido à uma maior facilidade de gerar segmentos de 4 peças identicas em diversas posições. Nós, como jogadores, escolhemos a coluna com maior probabilidade de gerar combinações, a coluna 4. Queremos que ele jogue nas colunas centrais.\n",
+    "Resultado esperado: No estado_inicial apresentado, é suposto que o MCTS tenda a jogar nas posições do meio devido a uma maior facilidade de gerar segmentos de 4 peças idênticas em diversas posições. Queremos que ele jogue nas colunas centrais.\n",
     "\n",
     "Resultado obtido:"
    ]
@@ -1796,7 +1796,7 @@
    "id": "ca6d43ba-f384-4e2d-ba19-eca02a23fcbf",
    "metadata": {},
    "source": [
-    "Resultado esperado igual ao resultado obtido. O MCTS optou por jogar na coluna do meio, algo já esperado, visto que as coluna do meio é a que possui mais opções de combinações de segmentos de 4, e a que obteve mais vitórias nas simulações = 0.44983818770226536.\n"
+    "Resultado esperado igual ao resultado obtido. O MCTS optou por jogar na coluna do meio, algo já esperado, visto que a coluna do meio é a que possui mais opções de combinações de segmentos de 4, e a que obteve mais vitórias nas simulações = 0.44983818770226536.\n"
    ]
   },
   {
@@ -1930,7 +1930,7 @@
    "metadata": {},
    "source": [
     "                  \n",
-    "Resultado esperado: No estado_inicial, apenas 6 filhos existem, pois a coluna 4 está cheia. Nosso grupo consgue ganhar o jogo ao jogar na coluna 2, tanto verticalmente como na diagonal. Queremos que o MCTS nos impeça e jogue na coluna 3.\n",
+    "Resultado esperado: No estado_inicial, apenas 6 filhos existem, pois a coluna 4 está cheia. Nosso grupo consegue ganhar o jogo ao jogar na coluna 2, tanto verticalmente como na diagonal. Queremos que o MCTS nos impeça e jogue na coluna 3.\n",
     "\n",
     "Resultado obtido:\n"
    ]
