--- a/Relatorio_Connect4.ipynb
+++ b/Relatorio_Connect4.ipynb
@@ -49,7 +49,7 @@
     "## Introdução\n",
     "\n",
     "#### Sobre o jogo:\n",
-    "Connect 4, também conhecido como Quatro em Linha, é um jogo de estratégia para dois jogadores. O objetivo é ser o primeiro a alinhar quatro peças da mesma cor consecutivamente, seja na vertical, horizontal ou diagonal, em um tabuleiro vertical com sete colunas e seis linhas. Os jogadores alternam colocando suas peças em uma coluna vazia, tentando bloquear o adversário enquanto procuram formar sua própria sequência de quatro peças.\n",
+    "Connect 4, também conhecido como Quatro em Linha, é um jogo de estratégia para dois jogadores. O objetivo é ser o primeiro a alinhar quatro peças da mesma cor consecutivamente, seja na vertical, horizontal ou diagonal, em um tabuleiro vertical com sete colunas e seis linhas. Os jogadores alternam entre si colocando suas peças em uma coluna, tentando bloquear o adversário enquanto procuram formar sua própria sequência de quatro peças.\n",
     "\n",
     "#### O nosso projeto:\n",
     "\n",
@@ -62,7 +62,7 @@
     "\n",
     "\n",
     "#### Considerações:\n",
-    "Para a apresentação do código neste notebook, optamos por retirar a integração com o Pygame, gerando um código mais limpo e mais fácil de compreender pela leitura. Assim, aqui temos apenas o programa lógico e algorítimico do jogo. O código completo está disponível no GitHub.\n",
+    "Para a apresentação do código neste notebook, optamos por retirar a integração com o Pygame, gerando um código mais limpo e mais fácil de compreender pela leitura. Assim, aqui temos apenas o programa lógico e algorítmico do jogo. O código completo está disponível no GitHub.\n",
     "\n",
     "\n"
    ]
@@ -156,7 +156,7 @@
    "metadata": {},
    "source": [
     "### constants.py\n",
-    "As variáveis globais usadas durante toda a execuçãodo jogo são armazenadas em um arquivo constants.py."
+    "As variáveis globais usadas durante toda a execução do jogo são armazenadas em um arquivo constants.py."
    ]
   },
   {
@@ -180,7 +180,7 @@
    "metadata": {},
    "source": [
     "### board.py\n",
-    "O estado do jogo é armazenado na classe abaixo, baiscamente é uma matriz 6x7 que se completa com valores 1 e 2, que são as peças dos jogadores"
+    "O estado do jogo é armazenado na classe abaixo. Basicamente, é uma matriz 6x7 que se completa com valores 1 e 2, que são as peças dos jogadores."
    ]
   },
   {
@@ -369,11 +369,11 @@
    "source": [
     "#### Funções \n",
     "\n",
-    "Para isso, foram criadas duas funções auxiliares para avaliar o score the determinado estado (posições das peças):  \n",
+    "Para isso, foram criadas duas funções auxiliares para avaliar o score de determinado estado (posições das peças):  \n",
     "\n",
     "A função **calculate_board_score()** segmenta a matriz em segmentos de 4 espaços (verticalmente, horizontalmente e diagonalmente).\n",
-    "Logo após, o segmento é passado como argumento para a função **weights()**, que calcula um valor de pontos associado a esse bloco de acordo com o número de peças de cada jogador existem no segmento.  \n",
-    "Para cada segmento, utilizamos a seguinte heurística, sendo \"Player 1\" = jogador e \"Player 2\" = IA:  \n",
+    "Logo após, o segmento é passado como argumento para a função **weights()**, que calcula um valor de pontos associado a esse bloco de acordo com o número de peças de cada jogador existente no segmento.  \n",
+    "Para cada segmento, utilizamos a seguinte heurística, sendo \"Player 1\" = jogador e \"Player 2\" = oponente/IA:  \n",
     "\n",
     "- Existem peças do Player 1 e do Player 2 = **0 pontos**\n",
     "- 1 peça do Player 2 = **1 ponto**\n",
@@ -448,11 +448,11 @@
    "id": "a351f14a-3982-4389-a51f-33635e4b9d7d",
    "metadata": {},
    "source": [
-    "Essa pontuação tenta simular um cálculo de probabilidade de vitória com uma certa jogada. Quanto mais perto de completar uma sequência de 4 peças, maior a pontuação. De forma análoga, quanto mais perto estiver o jogador oponente de uma sequência de 4 peças, mais negativo será a pontuação (pois queremos evitar a vitória do oponente). Quando há peças dos dois jogadores num segmento, esse espaço não pode mais representar uma possibilidade de viória para nenhum dos dois jogadores, logo, recebe uma pontuação nula.  \n",
+    "Essa pontuação tenta simular um cálculo de probabilidade de vitória com uma certa jogada. Quanto mais perto de completar uma sequência de 4 peças, maior a pontuação. De forma análoga, quanto mais perto estiver o jogador oponente de uma sequência de 4 peças, mais negativo será a pontuação (pois queremos evitar a vitória do oponente). Quando há peças dos dois jogadores num segmento, esse espaço não pode mais representar uma possibilidade de vitória para nenhum dos dois jogadores, logo, recebe uma pontuação nula.  \n",
     "\n",
-    "As pontuações são simétricas, exceto quando se tem as 4 posições preenchidas com peças do mesmo jogador, onde a pontuação de 4 peças inimigas equivale ao dobro (negativo) da pontuação de 4 peças aliadas. Isso acontece para que evitar a vitória do inimigo seja sempre a prioridade, em vez de preferir acumular pontos.  \n",
+    "As pontuações são simétricas, exceto quando se tem as 4 posições preenchidas com peças do mesmo jogador, onde a pontuação de 4 peças inimigas equivale ao dobro (negativo) da pontuação de 4 peças aliadas. Isso acontece para que a prioridade seja sempre evitar a vitória do inimigo, em vez de preferir acumular pontos.  \n",
     "\n",
-    "Nota-se também que a pontuação é calculada com apenas uma procura na tabela. Inicialmente, havíamos tentando fazer uma varredura pela matriz em busca de cada uma das pontuações especificamente, o que gerava uma repetição desnecessária da procura. O modelo atual de implementação é um método mais eficiente de percorrer a matriz."
+    "Nota-se também que a pontuação é calculada com apenas uma procura na tabela. Inicialmente, havíamos tentado fazer uma varredura pela matriz em busca de cada uma das pontuações especificamente, o que gerava uma repetição desnecessária da procura. O modelo atual de implementação é um método mais eficiente de percorrer a matriz."
    ]
   },
   {
@@ -608,7 +608,7 @@
    "source": [
     "Como vemos, o A* teve sucesso ao calcular a melhor jogada para a sua vitória. Porém, por não ser um algoritmo para jogos adversariais, ele não consegue evitar a vitória do oponente.  \n",
     "\n",
-    "Embora tenhamos atribuído uma maior pontuação para sequências de 4 peças inimigas em relação á 4 peças aliadas, isso não é útil para o A*, uma vez que ele não consegue fazer previsões de jogadas do oponente. Esse algoritmo joga apenas procurando a sua própria vitória, independente do inimigo. Assim, só prejudica o jogo do outro jogador quando é para se beneficiar, mas não com o objetivo de evitar sua vitória inimiga.  \n",
+    "Embora tenhamos atribuído uma maior pontuação para sequências de 4 peças inimigas em relação a 4 peças aliadas, isso não é útil para o A*, uma vez que ele não consegue fazer previsões de jogadas do oponente. Esse algoritmo joga apenas procurando a sua própria vitória, independente do inimigo. Assim, só prejudica o jogo do outro jogador quando é para se beneficiar, mas não com o objetivo de evitar sua vitória inimiga.  \n",
     "Para corrigir essa falha, adaptamos o A* para que funcione como um jogo adversarial"
    ]
   },
@@ -621,8 +621,7 @@
     "\n",
     "## **A\\* Adversarial** (a_star.py)\n",
     "\n",
-    "Nessa adaptação, o A* avalia qual seria a melhor opção de coluna por meio da simulação das duas jogadas seguintes ao estado atual. Primeiro ele simula o score the cada jogada, e para cada simulação, ele também simula a melhor jogada inimiga em cima de sua própria jogada. Assim, em vez de simular apenas a jogada imediatamente seguinte (como faz o A* original), ele consegue jogar para evitar que o inimigo tenha boas jogadas\n",
-    ". \n",
+    "Nessa adaptação, o A* avalia qual seria a melhor opção de coluna por meio da simulação das duas jogadas seguintes ao estado atual. Primeiro ele simula o score de cada jogada, e para cada simulação, ele também simula a melhor jogada inimiga em cima de sua própria jogada. Assim, em vez de simular apenas a jogada imediatamente seguinte (como faz o A* original), ele consegue jogar para evitar que o inimigo tenha boas jogadas.   \n",
     "Além disso, podemos fazer algo divertido para interagir com o jogador: mostrar uma dica de jogada optimal para o oponente, visto que ela já é calculada durante a previsão de jogada da IA.\n",
     "\n",
     "Com isso, resolvemos o problema do A* anterior, pois agora conseguimos jogar para evitar a vitória do oponente, caso ela fosse ocorrer logo na sua jogada seguinte. No entanto, ainda não conseguimos prever o jogo além das duas jogadas seguintes. Para isso, temos o MCTS e o AlphBeta, que conseguem prever um maior número de jogadas seguintes de forma mais eficiente.  "
@@ -724,11 +723,11 @@
     "A base dessa descrição é a mesma do algoritmo MiniMax, mas o AlphaBeta possui uma eficiência maior, uma vez que descarta galhos da árvore que já são perceptivelmente desnecessários. Assim, optamos por implementar apenas o Alpha-Beta, e não o MiniMax.\n",
     "\n",
     "#### Funcionamento\n",
-    "Para que o algoritmo Alpha-Beta possa escolher a melhor jogada possível, ele também se utiliza da heurística. Para que o algoritmo funcione, precisamos definir um limite, caso contrário, ele testaria todas as opções possíveis, o que ultrapassa os recursos computacionais disponíveis. Para isso, optamos pr limitar o algorítmo pela profundidade (variável depht_limit).\n",
+    "Para que o algoritmo Alpha-Beta possa escolher a melhor jogada possível, ele também se utiliza da heurística. Para que o algoritmo funcione, precisamos definir um limite, caso contrário, ele testaria todas as opções possíveis, o que ultrapassa os recursos computacionais disponíveis. Para isso, optamos por limitar o algorítmo pela profundidade (variável depht_limit).\n",
     "\n",
     "Com o limite escolhido, o Alpha-Beta percorre estados filhos até que encontre um estado em que o jogo termine, ou até atingir o limite de profundidade, e depois retorna o resultado da pontuação deste nó, atualizando os valores de mínimo e máximo. A partir daí, os nós pais alternam entre pegar a pontuação máxima onde as peças aliadas estão jogando e a pontuação mínima onde as peças inimigas estão jogando, aplicando cortes dos ramos com as atualizações de valores máximos e mínimos (alpha e beta). \n",
     "\n",
-    "O nó raíz é o estado atual do jogo, que pega o maior score possível entre os filhos do nível 1, para maximizar as chances de vitória do jogador atual, no nível 2, simulamos a jogada do oponente supondo que ele escolha uma jogada que vai minimizar nosso score, e assim alternamos até o último nó alcançavel.\n"
+    "O nó raíz é o estado atual do jogo, que pega o maior score possível entre os filhos do nível 1, para maximizar as chances de vitória do jogador atual. No nível 2, simulamos a jogada do oponente supondo que ele escolha uma jogada que vai minimizar nosso score, e assim alternamos até o último nó alcançável.\n"
    ]
   },
   {
@@ -851,17 +850,17 @@
     "\n",
     "\n",
     "***Classe Node**:* Representa um nó na árvore de busca do MCTS. Cada nó tem as seguintes informações:\n",
-    "1. O estado atual do tabuleiro do jogo\n",
-    "1. O nó pai, contendo informações como o estado anterior do tabuleiro\n",
-    "2. Os nós filhos, contendo informações como os possíveis movimentos para se jogar e criar um novo tabuleiro.\n",
-    "3. O número de visitas deste nó (vezes que já foi explorado)\n",
-    "4. O número de vitórias deste nó (quantidade de vezes que esse nó leva à vitória nas simulações)\n",
+    "1. O estado atual do tabuleiro do jogo;\n",
+    "1. O nó pai, contendo informações como o estado anterior do tabuleiro;\n",
+    "2. Os nós filhos, contendo informações como os possíveis movimentos para se jogar e criar um novo tabuleiro;\n",
+    "3. O número de visitas deste nó (vezes que já foi explorado);\n",
+    "4. O número de vitórias deste nó (quantidade de vezes que esse nó leva à vitória nas simulações);\n",
     "5. O jogador atual do estado.\n",
     "  \n",
     "Funções:\n",
-    "1. *ucb()*: calcula a UCB (Upper Confidence Bound) para balancear a exploração e a exploração durante a seleção de movimentos\n",
+    "1. *ucb()*: calcula a UCB (Upper Confidence Bound) para balancear a exploitation e a exploration durante a seleção de movimentos\n",
     "2. *add_children()*: adiciona possíveis movimentos (nós filhos) ao nó\n",
-    "3. *score()*: retorna o valor da pontuação de um nó,calculado a partir das suas visitas e vitórias."
+    "3. *score()*: retorna o valor da pontuação de um nó, calculado a partir das suas visitas e vitórias."
    ]
   },
   {
@@ -923,11 +922,11 @@
    "metadata": {},
    "source": [
     "***Classe MCTS**:* Controla a busca MCTS a partir de um nó raiz. A função search executa a busca dentro de um limite de tempo. Durante a busca, são realizadas quatro etapas principais: seleção, expansão, simulação (rollout) e backpropagate.\n",
-    "1. Início: A função *start()* expande todos os filhos do estado atual e faz 6 simulações em cada um deles antes de iniciar a lógica do mcts\n",
+    "1. Início: A função *start()* expande todos os filhos do estado atual e faz 6 simulações em cada um deles antes de iniciar a lógica do mcts.\n",
     "2. Pesquisa: A função *search()* itera sobre os nós da árvore, dentro do limite de tempo estabelecido, percorrendo a partir da raiz:  \n",
-    "    \\- seleciona o nó folha que possui o caminho até ele pelos maiores ucb's  \n",
-    "    \\- se o nó ainda não estiver participado de uma simulação, faz rollout sobre ele  \n",
-    "    \\- se já tiver alguma visita, expande e simula uma vez sobre cada um dos 4 filhos selecionados na expansão\n",
+    "    \\- seleciona o nó folha que possui o caminho até ele pelos maiores ucb's;  \n",
+    "    \\- se o nó ainda não estiver participado de uma simulação, faz rollout sobre ele;  \n",
+    "    \\- se já tiver alguma visita, expande e simula uma vez sobre cada um dos 4 filhos selecionados na expansão.\n",
     "2. Seleção: A função *select()* escolhe um nó folha da árvore para expandir/simular, iterando sobre ela baseado no UCB de cada nó.\n",
     "4. Expansão: A função *expand()* adiciona novos nós filhos (possíveis movimentos) à árvore e retorna, no máximo, 4 filhos a serem simulados.\n",
     "5. Simulação (Rollout): A função *rollout()* realiza simulações aleatórias do jogo até atingir um estado final de vitória ou empate.\n",
@@ -1111,7 +1110,7 @@
    "metadata": {},
    "source": [
     "## interface.py\n",
-    "Aqui ficam armazenadas as funções relacionadas à interface do jogo e a execução do jogo dentro de um loop while que se repete até algum jogador ganhar ou o jogo der empate. Para criar a interface, utilizamos a biblioteca pygame. As funções de lógica do jogo estão bem integradas com o pygame, mas optamos por retirar toda a parte da interface para que fosse possível testar os algorítmos. No código original é mais complexo."
+    "Aqui ficam armazenadas as funções relacionadas à interface do jogo. A execução fica dentro de um loop while que se repete até que algum jogador ganhe ou que o jogo dê empate. Para criar a interface, utilizamos a biblioteca pygame. As funções de lógica do jogo estão bem integradas com o pygame, mas optamos por retirar toda a parte da interface para que fosse possível testar os algorítmos."
    ]
   },
   {
@@ -1176,7 +1175,7 @@
    "metadata": {},
    "source": [
     "## main.py\n",
-    "Para executar o jogo, basta digitar python3 main.py. Isso acionará o método main() e instanciará um objeto Board, um objeto Interface e chamara a função para rodar o jogo(Interface.start_game())\n",
+    "Para executar o jogo, basta digitar python3 main.py. Isso acionará o método main() e instanciará um objeto Board, um objeto Interface e chamara a função para rodar o jogo (Interface.start_game())\n",
     "\n",
     "\n",
     "\n"
