--- a/Analise_Connect4.ipynb
+++ b/Analise_Connect4.ipynb
@@ -2153,9 +2153,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed3fa6b8-af3b-4062-9abd-9f103d80e58a",
+   "metadata": {},
+   "source": [
+    "# Conclusão\n",
+    "\n",
+    "Ao fim do projeto, chegamos às seguintes conclusões quanto aos algoritmos:  \n",
+    "- **A\\***: por não ser um algoritmo adversarial, não consegue diretamente impedir a vitória do oponente. Logo, não se adequa à proposta do jogo;\n",
+    "- **A\\* adversarial**: já é funcional e joga bem contra um humano médio, porém não consegue elaborar jogadas complexas nem prever estratégias a longo do prazo do oponente. Por outro lado, seu tempo de execução é mínimo, então as partidas são bem dinâmicas\n",
+    "- **Alpha Beta Pruning**: consegue criar partidas mais elaboradas e um jogo bem interessante contra o humano. O seu tempo de execução aumenta muito à medida que a sua pesquisa é mais elaborada, mas foi possível encontrar uma produndidade de níveis explorados que gere um bom equilíbrio entre o seu funcionamento e o seu tempo de execução.\n",
+    "- **Monte Carlo Tree Search**: foi o algoritmo com melhor performance em jogo, porém a custo de um tempo de execução muito elevado. Assim, com o tempo escolhido para uma melhor interação com o usuário, não performa tão bem quanto o Alpha Beta."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26872975-d1c4-4546-9e6d-ea38f65b21a9",
+   "id": "63861782-8ec0-46a7-af89-cf9ed9db5cbe",
    "metadata": {},
    "outputs": [],
    "source": []
